estilos en los formularios

--- a/views/login.html
+++ b/views/login.html
@@ -10,7 +10,7 @@
 
 <body>
   <div class="contenedor">
-    <form>
+    <form class="formularioLogin">
       <h1>Iniciar sesión</h1>
       <div class="derecha">
         <h3>Email</h3>
