--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,12 +6,44 @@ html{
 
 .contenedor{
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   background-color: grey;
-  width: 80%;
-  flex-direction: column;
-  margin: auto;
-  align-items: center;
-  margin: 3rem;
 }
 
+.formularioRegister{
+  display: flex;
+  width: 100%;
+  max-height: 300px;
+  padding: 2rem;
+  margin-left: -20px;
+  margin-top: -30px;
+  flex-direction: row;
+}
+
+.formularioRegister .izquierda{
+  display: flex;
+  flex: 1;
+  margin: 1rem;
+  flex-direction: column;
+}
+
+.formularioRegister .derecha{
+ display: flex;
+ flex: 1;
+ margin: 1rem;
+ flex-direction: column;     
+}
+
+
+h1{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+button{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  width: 100px;
+  height: 20px;
+}
