--- a/views/register.html
+++ b/views/register.html
@@ -11,7 +11,7 @@
 
 <body>
   <div class="contenedor">
-    <form>
+    <form class="formularioRegister">
       <h1>Iniciar sesión</h1>
       <div class="izquierda">
         <h3>Nombre</h3>
