retocando los estilos

--- a/views/register.html
+++ b/views/register.html
@@ -12,7 +12,7 @@
 <body>
   <div class="contenedor">
     <form class="formularioRegister">
-      <h1>Iniciar sesión</h1>
+      <h1>Crea tu cuenta</h1>
       <div class="izquierda">
         <h3>Nombre</h3>
         <input type="text">
